--- a/install_mysql1.yml
+++ b/install_mysql1.yml
@@ -1,7 +1,7 @@
   ---
   - hosts: all
     user: root
-    pre_tasks:
+    tasks:
       - name: Install the MySQL repo.
         yum:
           name: http://repo.mysql.com/mysql-community-release-el7-5.noarch.rpm
