--- a/install_mysql1.yml
+++ b/install_mysql1.yml
@@ -1,7 +1,12 @@
   ---
   - hosts: all
     user: root
-    tasks:
+    become: yes
+    vars_files: 
+      - vars/main.yml
+    roles: 
+      - { role: geerlingguy.mysql }
+    pre_tasks:
       - name: Install the MySQL repo.
         yum:
           name: http://repo.mysql.com/mysql-community-release-el7-5.noarch.rpm
