--- a/create_user_win1.yml
+++ b/create_user_win1.yml
@@ -3,39 +3,45 @@
   user: Administrator   
   tasks:
     - name: Create local group "Privileged Group"
-      var.lib.awx.ansible.windows.win_group:
+#     ansible.windows.win_group:
+      win_group:
         name: privileged_group
         description: Privileged Group
         state: present
         
     - name: Create local group "Unprivileged Group"
-      ansible.windows.win_group:
+#     ansible.windows.win_group:
+      win_group:
         name: unprivileged_group
         description: Unprivileged Group
         state: present
         
     - name: Add user "Privileged User with Password"
-      ansible.windows.win_user:
+#     ansible.windows.win_user:
+      win_user:
         name: priv_user_wp
         password: windows
         groups: privileged_group
         state: present
         
     - name: Add user "Privileged User without Password"
-      ansible.windows.win_user:
+#     ansible.windows.win_user:
+      win_user:
         name: priv_user_wop
         groups: privileged_group
         state: present
         
     - name: Add user "Unprivileged User with Password"
-      ansible.windows.win_user:
+#     ansible.windows.win_user:
+      win_user:
         name: unpriv_user_wp
         password: windows
         groups: unprivileged_group
         state: present
         
     - name: Add user "Unprivileged User without Password"
-      ansible.windows.win_user:
+#     ansible.windows.win_user:
+      win_user:
         name: unpriv_user_wop
         groups: unprivileged_group
         state: present
